personalPage.css
body{
    height: 100vh;
    width: 100vw;
    max-width: 100vw;
    margin: 0;
    background-color: #F8F8F8;
}

/********************************************************************************************/
/* navbar css */
/********************************************************************************************/
#navBarContainer{
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;

    top: 0;

    width: 100%;
    height: 10%;


    transition-property: background-color, color;
    transition-duration: 0.5s;

    box-shadow: 0 4px 4px rgba(0,0,0,.4);

    font-family: "Poppins", sans-serif;
    z-index: 100;
}

#aplusplus{
    display: flex;
    flex-direction: column;
    justify-content: center;

    margin-left: 15%;
    padding: 5px;

    border: solid #FF3b3F;
    border-radius: 100px;

    font-weight: bold;

    height: 30px;
    transition-property: background-color, color, border;
    transition-duration: 0.5s;

}

#hamburgerMenu{
    font-size: 225%;
    margin-right: 10%;
    display: none;
}

#navBar{
    display: flex;
    justify-content: flex-end;
    align-self: center;
    margin-right: 10%;
    height: 100%;
    flex-grow: 1;
}

#navBar a{
    display: flex;
    flex-direction: column;
    justify-content: center;

    text-align: center;
    text-decoration: none;
    letter-spacing: 1px;
    font-weight: bold;


    width: 10%;
    min-width: 100px;

    transition-property: background-color, color;
    transition-duration: 0.5s;
}

#navBar a:visited{
    color: #282828;
}

/********************************************************************************************/
/* frontcover css */
/********************************************************************************************/
#frontCover{
    background: url("img/scenery.jpg") no-repeat fixed center center;
    background-size: cover;
    height: 100%;
}

#frontCoverOverlay{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    height: 100%;
    background-color: rgba(40,40,40,0.7);
}

#textContainer{
    margin: auto;

    font-size: 75px;

    display:flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;

    color: #F8F8F8;
}

#textContainer p{

    border-left: 5px solid rgba(255,59,63, 1);
    border-bottom: 5px solid rgba(255,59,63, 1);

    margin: 2% 0;
    padding: 1% 2%;

    letter-spacing: 5px;
    white-space: nowrap;

    font-family: "Viga", sans-serif;
}

#arrowContainer{ margin-bottom: 3%; }

#arrow{

    font-size: 100px;
    color: rgba(255,59,63,1);
    animation-duration: 3s;

}

/********************************************************************************************/
/* About section css */
/********************************************************************************************/
#aboutMe, #contactMe{
    height: 100%;
    background-color: #F8F8F8;
}

#aboutMe{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-color: #F8F8F8;
    background: url("img/aboutBG.jpg") no-repeat fixed center center;
    background-size: cover;
}

#aboutTitleContainer{
    width: 40%;

    display: flex;
    justify-content: center;

    background: #282828;
    
    box-shadow: -4px 4px 4px rgba(0,0,0,.4), 4px -4px 4px rgba(0,0,0,.4);

    transition-property: background;
    transition-duration: 0.5s;

    transform: rotate(350deg);

    position: relative;
    align-self: flex-start;
    left: 1%;

}

#aboutTitleBox, #portfolioTitleBox, #contactTitleBox{
    display: inline-block;
    padding: 1%;
}

#aboutTitle, #portfolioTitle, #contactTitle {
    overflow: hidden;
    white-space: nowrap;
    letter-spacing: 5px;
    margin: 0 auto;
    width: 0px;
    font-size: 100px;
    font-family: "Dhurjati", sans-serif;
    color: #F8F8F8;
    transition-property: width;
    transition-timing-function: steps(25);
    transition-duration: 2.5s;
}

#aboutContentContainer{
    display: flex;
    justify-content: space-around;
    align-items: center;

    box-shadow: -4px 4px 4px rgba(0,0,0,.4), 0 0 4px rgba(0,0,0,.4);
    
    margin: 0 5%;

    background: rgba(229, 229, 229, 1);

    transition-property: background;
    transition-duration: 0.5s;

    border-radius: 10px;

    max-height: 75%;

}

#aboutTxtContainer, #photoContainer{
    display: flex;
    justify-content: center;
    align-items: center;
}

#aboutTxtContainer{
    margin: 5% 5% 5% 0;
    flex-grow: 2;
    padding: 2.5%;
}

#photoContainer{
    margin: 2.5%;
    flex-grow: 1;
}
#aboutMeTxt{
    font-family: "Kalam", sans-serif;
    font-size: 17px;

    color: #F8F8F8;

    margin: 0;
    text-align: justify;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-self: center;
}

#aboutMeTxt #quote, #aboutMeTxt #author{
    width: 100%;

    font-weight: bold;
    text-align: center;

    padding: 1%;

    border-top: solid #FF3b3F;
}

#me{
    border-radius: 200px;
    height: 300px;
    width: 300px;
}

/********************************************************************************************/
/* Portfolio Section CSS */
/********************************************************************************************/
#myPortfolio{
    height: 100%;
    background-color: #282828;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background: url("img/portfolioBG.jpg") no-repeat fixed center center;
    background-size: cover;
}

#portfolioTitleContainer{
    width: 40%;

    display: flex;
    justify-content: center;
    
    box-shadow: -4px 4px 4px rgba(0,0,0,.4), 4px -4px 4px rgba(0,0,0,.4);

    background: #282828;

    transform: rotate(350deg);

    position: relative;
    align-self: flex-start;
    left: 1%;
}

#portfolioContentContainer{
    width: 80%;
}

#current, #inProgress, #next{ 

    display: flex;
    width: 0px;
    justify-content: space-around;
    align-items: center;
    height: 100%;
    overflow: hidden;

    transition-property: width;
    transition-duration: 0.5s;

    padding: 1% 0;

}
#portfolioContentContainer .colored{
    font-size: 50px;
    margin: 1%;

    transition-property: font-size;
    transition-duration: 0.25s;

    max-height: 80%;
}

#portfolioContentContainer .colored:hover{
    font-size: 100px;
}

.drop {
    font-size: 50px;
    text-align: center;

    margin: 0;


    border-radius: 10px;
    

    background: rgba(40,40,40,0.9);
    width: 100%;

    display: flex;
    
}

.drop a{
    display: block;
    width: 100%;

    padding: 1% 0;

    font-family: "Passion One", sans-serif;

    color: #F8F8F8;

    border-right: #FF3b3F solid;
    border-left: #FF3b3F solid;

    vertical-align: middle;
}
.drop a:hover{
    background-color: #f8f8f8;
    color: #282828;

    transition-property: background-color;
    transition-duration: 0.5s;

    cursor: pointer;
}

#projectContainer{
    display: flex;
    justify-content: space-around;
    align-items: center;

    margin-top: 1%;
}

#projectContainer div{
    width: 400px;
    height: 200px;
}
#projectContainer #weatherApp {
    background: url("img/weatherApp.png") no-repeat;
    background-size: contain;
}

#projectContainer #quoteMachine {
    background: url("img/quoteMachine.png") no-repeat;
    background-size: contain;
}

#projectContainer a{
    text-decoration-color: #FF3b3F;
}

.colorBox{
    width: 100%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    background-color: #282828;

    transition: background-color, color;
    transition-duration: 0.5s;

    color: #F8F8F8;
}

.colorBox:hover{
    background-color: transparent;

    color: #282828;
}

.colorBox p {
    margin: 0;
    font-size: 50px;
    font-family: "Passion One", sans-serif;
    text-decoration-color: #FF3b3F;
    text-align: center;
}




/********************************************************************************************/
/* Contact Section CSS */
/********************************************************************************************/
#contactMe{
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background: url("img/contactBG.jpg") no-repeat fixed center center;
    background-size: cover;
}

#contactTitleContainer{
    width: 40%;

    display: flex;
    justify-content: center;

    background: #282828;

    box-shadow: -4px 4px 4px rgba(0,0,0,.4), 4px -4px 4px rgba(0,0,0,.4);


    transform: rotate(350deg);

    position: relative;
    align-self: flex-start;
    left: 1%;
}

#contactContentContainer{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    box-shadow: -4px 4px 4px rgba(0,0,0,.4), 0 0 4px rgba(0,0,0,.4);
    
    margin: 0 5%;

    background: rgba(40,40,40,0);
    width: 80%;
    height: 75%;

    border-radius: 10px;
}

/********************************************************************************************/
/* Media Queries */
/********************************************************************************************/
@media only screen and (max-width: 480px){
    #textContainer{ font-size: 25px; }
    #aboutMeTxt{ font-size: 7px; }
    #me{
        border-radius: 100px;
        height: 125px;
        width: 125px;
    }
    #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 1px; }
    #portfolioContentContainer .colored{ font-size: 30px; }
    #projectContainer div {
        width: 150px;
        height: 75px;
    }
    .colorBox p{ font-size: 35px; }
}

@media screen and (min-width: 481px) and (max-width: 600px){
    #textContainer{ font-size: 40px; }
    #aboutMeTxt{ font-size: 10px; }
    #me{
        border-radius: 125px;
        height: 135px;
        width: 135px;
    }
    #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 2px; }
    #portfolioContentContainer .colored{ font-size: 35px; }
    #projectContainer div {
        width: 200px;
        height: 100px;
    }
    .colorBox p{ font-size: 45px; }
}

@media screen and (min-width: 601px) and (max-width: 767px){
    #textContainer{ font-size: 50px; }
    #aboutMeTxt{ font-size: 15px; }
    #me{
        border-radius: 290px;
        height: 200px;
        width: 200px;
    }
    #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 3px; }
    #portfolioContentContainer .colored{ font-size: 40px; }
    #projectContainer div {
        width: 250px;
        height: 125px;
    }
    .colorBox p{ font-size: 55px; }
}

@media screen and (min-width: 768px) and (max-width: 1024px){
    #textContainer{ font-size: 60px; }
    #aboutMeTxt{ font-size: 15px; }

    #me{
        border-radius: 290px;
        height: 200px;
        width: 200px;
    }

    #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 4px; }
    #portfolioContentContainer .colored{ font-size: 45px; }

    #projectContainer div {
        width: 300px;
        height: 150px;
    }

    .colorBox p{ font-size: 65px; }
}

@media screen and (max-width: 767px){


    #aboutContentContainer{
        flex-direction: column;
        justify-content: space-around;
        height: 75%;
    }
    #aboutTxtContainer, #photoContainer{ margin: 0;  }
    #navBar{ display: none; }
    #hamburgerMenu{ display: block; }
}

